# RemoteWorkers

./: .#TODO.org  DEVELOPMENT-INFO.txt  LICENSE  LICENSES  TODO.org  TODO.txt  UI_guidelines.org  WORKERS-INFO.txt  philosophy.org
src/ControlUnit/: CMakeCache.txt  CMakeLists.txt  Devices.txt  WorkersList.txt  conf.txt  main.cpp
src/ControlUnit/ConsoleInterface/: CMakeLists.txt  Console.cpp
src/ControlUnit/DataStructures/: ByteStream.cc  ByteStream.cpp  ByteStream.hpp  CMakeLists.txt
src/ControlUnit/NetworkInterface/: CMakeLists.txt  Makefile  NetworkSocketBase.cpp  NetworkSocketBase.hpp  NetworkSocketSsl.cpp  NetworkSocketSsl.hpp  network_socket_ssl.hpp
src/ControlUnit/RwConsoleInterface/: Console.cc
src/ControlUnit/RwDataStructures/: ByteStream.h  CMakeLists.txt  RwByteArray.cc  RwByteArray.h  RwByteStream-incl.h  RwByteStream.cc  RwByteStream.h
src/ControlUnit/RwExecutables/: CMakeLists.txt
src/ControlUnit/RwExecutables/RwGraphical/: CMakeLists.txt  main.cc
src/ControlUnit/RwExecutables/RwPipe/: CMakeLists.txt  main.cc
src/ControlUnit/RwGUI/: CMakeLists.txt  RwAboutWindow.cc  RwAboutWindow.h  RwAbstractMode.cc  RwAbstractMode.h  RwEventsMode.cc  RwEventsMode.h  RwMainWindow.cc  RwMainWindow.h  RwModeWidget.cc  RwModeWidget.h  RwPrefWindow.cc  RwPrefWindow.h  RwRemoteDeviceItem.cc  RwRemoteDeviceItem.h  RwRemoteDevicesMode.cc  RwRemoteDevicesMode.h  RwWorkerWidget.cc  RwWorkerWidget.h  RwWorkersCenterMode.cc  RwWorkersCenterMode.h
src/ControlUnit/RwHistory/: .#CMakeLists.txt  CMakeLists.txt  RwEvent.cc  RwEvent.h  RwEventList.h  RwEventLog.cc  RwEventLog.h  RwEventType.cc  RwEventType.h  RwServerStartedEvent.cc  RwServerStartedEvent.h  RwServerStoppedEvent.cc  RwServerStoppedEvent.h  RwWorkerAddedEvent.cc  RwWorkerAddedEvent.h  RwWorkerExecutionEvent.cc  RwWorkerExecutionEvent.h  RwWorkerRemovedEvent.cc  RwWorkerRemovedEvent.h
src/ControlUnit/RwNetworkInterface/: CMakeLists.txt  RwNetworkSocketBase.cc  RwNetworkSocketBase.h  RwNetworkSocketSsl.cc  RwNetworkSocketSsl.h
src/ControlUnit/RwNetworking/: CMakeLists.txt  RwCommandClientLocal.cc  RwCommandClientLocal.h  RwCommandReply.cc  RwCommandReply.h  RwCommandRequest.cc  RwCommandRequest.h  RwCommandServerBase.cc  RwCommandServerBase.h  RwCommandServerLocal.cc  RwCommandServerLocal.h  RwCommandServerSSL.cc  RwCommandServerSSL.h  RwCommandServerTCP.cc  RwCommandServerTCP.h
src/ControlUnit/RwNetworking/RwClients/: CMakeLists.txt  RwClientList.cc  RwClientList.h  RwCommandClientBase.cc  RwCommandClientBase.h  RwCommandClientLocal.cc  RwCommandClientLocal.h  RwCommandClientSSL.cc  RwCommandClientSSL.h  RwCommandClientTCP.cc  RwCommandClientTCP.h  RwCommandLocalPipeIn.cc  RwCommandLocalPipeIn.h  RwCommandLocalPipeOut.cc  RwCommandLocalPipeOut.h  RwCommandLocalPipeServer.cc  RwCommandLocalPipeServer.h  RwRemoteDevice.cc  RwRemoteDevice.h  RwRemoteDeviceList.cc  RwRemoteDeviceList.h
src/ControlUnit/RwNetworking/RwNetDataStructures/: CMakeLists.txt  RwCommandReply.cc  RwCommandReply.h  RwCommandRequest.cc  RwCommandRequest.h  RwNetDataStructureBase.cc  RwNetDataStructureBase.h
src/ControlUnit/RwNetworking/RwServers/: CMakeLists.txt  RwCommandServerBase.cc  RwCommandServerBase.h  RwCommandServerLocal.cc  RwCommandServerLocal.h  RwCommandServerSSL.cc  RwCommandServerSSL.h  RwCommandServerTCP.cc  RwCommandServerTCP.h  RwCommandServerThread.cc  RwCommandServerThread.h
src/ControlUnit/RwNetworking/RwSocket/: CMakeLists.txt  RwAbstractSocket.cc  RwAbstractSocket.h  RwLocalSocket.cc  RwLocalSocket.h  RwSSLSocket.cc  RwSSLSocket.h  RwTCPSocket.cc  RwTCPSocket.h
src/ControlUnit/RwTests/: CMakeLists.txt
src/ControlUnit/RwTests/EventLogTest/: CMakeLists.txt  EventLogTest.cc
src/ControlUnit/RwTests/GeneralPurposeNetworkingTest/: CMakeLists.txt  GeneralPurposeNetworkingTest.cc
src/ControlUnit/RwTests/GenericTest/: CMakeLists.txt  main.cc
src/ControlUnit/RwTests/LocalServerTest/: CMakeLists.txt  DummyClass.h  LocalServerTest.cc
src/ControlUnit/RwTests/SecurityPenetrationTest/: CMakeLists.txt  SecurityPenetrationTest.cc
src/ControlUnit/RwTests/SimpleRun/: CMakeLists.txt  SimpleRun.cc
src/ControlUnit/RwTests/SimpleStressTest/: CMakeLists.txt  SimpleStressTest.cc
src/ControlUnit/RwUtils/: CMakeLists.txt
src/ControlUnit/RwUtils/Log/: CMakeLists.txt  FileLogger.cc  Logger.h  LoggerBaseClass.h
src/ControlUnit/RwUtils/Programming/: CMakeLists.txt  Classes.cc
src/ControlUnit/RwUtils/RwGlobal/: CMakeLists.txt  RwClasses.cc  RwClasses.h  RwConfiguration.cc  RwConfiguration.h  RwDefines.cc  RwDefines.h  RwReturn.cc  (+1 more)
src/ControlUnit/RwWorkerInterface/: CMakeLists.txt  RwCommand.cc  RwCommand.h  RwConfiguration.cc  RwConfiguration.h  RwManagement.cc  RwManagement.h  RwReply.cc  RwReply.h  RwWorker.cc  RwWorker.h  RwWorkerList.cc  RwWorkerList.h  Worker.h
src/ControlUnit/Tests/: CMakeLists.txt
src/ControlUnit/Utils/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.hpp  CrossPlatform.cpp  CrossPlatform.hpp  FileLogger.cpp  FileLogger.hpp  FileManagement.cpp  Logger.cpp  Logger.hpp  LoggerBaseClass.cpp  LoggerBaseClass.hpp  LoggerConsoleStrategy.cpp  LoggerConsoleStrategy.hpp  LoggerFileStrategy.cpp  LoggerFileStrategy.hpp  LoggerStrategy.cpp  LoggerStrategy.hpp  Profiler.cpp  Profiler.hpp  SystemManagement.cpp  SystemManagement.hpp
src/ControlUnit/WorkerInterface/: CMakeLists.txt  Command.cc  Command.cpp  Command.h  Command.hpp  Configuration.cc  Configuration.cpp  Configuration.h  Configuration.hpp  Management.cpp  Management.h  Management.hpp  Reply.cc  Reply.cpp  Reply.h  Reply.hpp  Worker.cc  Worker.cpp  Worker.h  Worker.hpp
src/Workers/: CMakeLists.txt  README
src/Workers/ListAllWorkers/: CMakeLists.txt  Functions.cc  Functions.h  main.cc
src/Workers/NastyBadWorker/: CMakeLists.txt  main.cc  main.py
src/Workers/SecurityPenetrationTestWorker/: CMakeLists.txt  SanitizedEnvironment.cc  SanitizedEnvironment.h  SanitizedEnvironment.py  main.cc
src/Workers/SimpleTestWorker/: CMakeLists.txt  SimpleTestWorker.cc  SimpleTestWorker.cpp  SimpleTestWorker.h  SimpleTestWorker.hpp  main.cc  main.cpp
(+89 files in other folders)
